// Copyright 2021 Lightbend Inc.

// tag::subscribing[]
syntax = "proto3";

package shopping.cart.actions;

import "akkaserverless/annotations.proto";
import "cart/shopping_cart_domain.proto";
import "google/protobuf/empty.proto";

// end::subscribing[]
// Receiving events from the broker. The analytics action itself does nothing,
// only logs what it receives.
// tag::subscribing[]
service ShoppingCartAnalyticsService {
  // get ItemAdded from the topic
  rpc ProcessAdded(shopping.cart.domain.ItemAdded) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = { // <1>
      topic: "shopping-cart-events" // <2>
    };
  }
  // end::subscribing[]
  rpc ProcessRemoved(shopping.cart.domain.ItemRemoved) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      topic: "shopping-cart-events"
    };
  }
  rpc ProcessCheckedOut(shopping.cart.domain.CheckedOut) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      topic: "shopping-cart-events"
    };
  }
  // tag::subscribing[]
}
// end::subscribing[]
